<resources>
    <string name="app_name">UnFit</string>
    <string name="pair_device">Pair new device</string>
    <string name="unpair_device">Unpair this device</string>
    <string name="change_device">Change active device</string>
    <string name="setup_device">Configure device</string>
    <string name="fetch">Fetch passive data</string>
    <string name="read">Read heart rate</string>
    <string name="reconnect">Try to reconnect</string>
    <string name="sync_settings">Synchronization</string>
    <string name="misc_settings">Miscellaneous</string>
    <string name="pref_sync">Synchronize</string>
    <string name="pref_sync_on">Upload data to remote server</string>
    <string name="pref_sync_off">Not synchronizing data to remote server</string>
    <string name="pref_remote">Synchronization endpoint</string>
    <string name="pref_remote_default">https://</string>
    <string name="pref_alarm">Vibrate when alarm clock fires</string>
    <string name="pref_alarm_on">Reacting to system alarm clock</string>
    <string name="pref_alarm_off">Ignoring system alarm clock</string>
    <string name="user_settings">User</string>
    <string name="pref_gender">Gender</string>
    <string name="pref_gender_select">Select your gender</string>
    <string name="pref_gender_male">Male</string>
    <string name="pref_gender_female">Female</string>
    <string name="pref_gender_other">Other</string>
    <string name="pref_age">Age</string>
    <string name="pref_height">Height</string>
    <string name="pref_weight">Weight</string>
    <string name="pref_remote_dialog">Set synchronization endpoint</string>
    <string name="pref_age_dialog">Enter your age</string>
    <string name="pref_height_dialog">Enter your height in centimeters</string>
    <string name="pref_weight_dialog">Enter your weight in kilograms</string>
    <string name="pref_side_left">Left arm</string>
    <string name="pref_side_right">Right arm</string>
    <string name="pref_side">Side worn on</string>
    <string name="pref_side_dialog">Select where the device is worn</string>
    <string name="pref_wifi">Sync mode</string>
    <string name="pref_sync_wifi">Sync only on WiFi connection</string>
    <string name="pref_sync_any">Sync on any connection</string>
    <string name="pref_sync_manual">Manual only</string>
    <string name="pref_sync_1h">Every hour</string>
    <string name="pref_sync_2h">Every 2 hours</string>
    <string name="pref_sync_6h">Every 6 hours</string>
    <string name="pref_sync_12h">Every 12 hours</string>
    <string name="pref_sync_day">Once per day</string>
    <string name="pref_sync_interval_dialog">How often to try to upload data</string>
    <string name="pref_sync_interval">Synchronization retry interval</string>
    <string name="pref_data_interval">Passive data interval</string>
    <string name="pref_data_interval_dialog">How often to read passive data from the device</string>
    <string name="pref_user">Synchronization user</string>
    <string name="pref_user_dialog">Username to use for synchronization</string>
    <string name="pref_password">Synchronization password</string>
    <string name="pref_password_dialog">Password to use for synchronization</string>
    <string name="manual_sync">Synchronize now</string>
    <string name="scan_devices">Scan for devices</string>
    <string name="manage_devices">Device management</string>
    <string name="pref_goal">Step count goal</string>
    <string name="pref_goal_dialog">Enter step count goal</string>
    <string name="pref_call">Vibrate upon incoming call</string>
    <string name="pref_call_on">Vibrate when called</string>
    <string name="pref_call_off">Do not vibrate when called</string>
    <string name="pref_hr_interval">Heartrate measurement interval</string>
    <string name="pref_hr_interval_dialog">How often to request a heart rate scan</string>
    <string name="pref_name">Device name</string>
    <string name="pref_name_dialog">Set a device name</string>
    <string name="debug_screen">Debug screen</string>
    <string name="no_data">No data yet</string>
    <string name="unnamed_device"><![CDATA[<unnamed>]]></string>
    <string name="device_found">Device found</string>
</resources>
