<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/manage_menu"
        android:title="@string/manage_devices">
        <item android:id="@+id/pair_device"
            android:title="@string/pair_device"
            />

        <item android:id="@+id/unpair_device"
            android:title="@string/unpair_device"
            />

        <item android:id="@+id/change_device"
            android:title="@string/change_device"
            />

        <item android:id="@+id/setup_device"
            android:title="@string/setup_device"
            />
    </item>

    <item android:id="@+id/reconnect"
        android:title="@string/reconnect"
        />

    <item android:id="@+id/fetch"
        android:title="@string/fetch"
        />

    <item android:id="@+id/fetch_hr"
        android:title="@string/read"
        />

    <item android:id="@+id/manual_sync"
        android:title="@string/manual_sync"
        />
</menu>